--- a/Zookeeper/Problems/List from string/task.html
+++ b/Zookeeper/Problems/List from string/task.html
@@ -6,4 +6,7 @@
   <p>So, if <code class="java">input_str</code>, for example, contains a string <code class="java">"python"</code>, your program should turn it to the list <code class="java">['p', 'y', 't', 'h', 'o', 'n']</code> and print it.</p>
  </body>
 </html><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 15 seconds</font><br><br>
+<b>Caution</b><br><br>
+You may see errors in your code or execution results due to missing context. Don’t worry about it, just write the solution and press Check.
+<br><br>
 <a href="https://hyperskill.org/learn/step/5979">Show topic summary</a>
